--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,7 @@
         
         // Confirmar asistencia por WhatsApp
         function confirmarAsistencia() {
-            const mensaje = encodeURIComponent('¡Hola! Confirmo mi asistencia al cumpleaños de Alonso el 23 de agosto de 10:00 am a 1:00 pm en CasaPlay Valle Grande. ¡Llevaré mis calcetas antideslizantes! Nos vemos ahí! 🎉🧦');
+            const mensaje = encodeURIComponent('¡Hola! Confirmo mi asistencia al cumpleaños de Alonso, el 23 de agosto de 10:00 am a 1:00 pm en CasaPlay Valle Grande. Estoy Listo para minar diversion y celebrar en modo creativo. ¡Llevaré mis calcetas antideslizantes! Nos vemos ahí!');
             const whatsappURL = `https://wa.me/56935299591?text=${mensaje}`;
             
             // Abrir WhatsApp
