--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="🎮 ¡Alonso cumple 8 años! - Fiesta Minecraft">
     <meta property="og:description" content="🎉 Te invitamos a celebrar el cumpleaños de Alonso el 23 de agosto en CasaPlay Valle Grande. ¡Será una aventura épica estilo Minecraft! 🧱⚔️">
     <meta property="og:image" content="https://i.imgur.com/minecraft-birthday.png">
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://enockdrw.github.io/invitacion-alonso-github.io/">
     <meta property="og:type" content="website">
     
     <!-- Meta tags para Twitter -->
