--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Meta tags para compartir en WhatsApp y redes sociales -->
     <meta property="og:title" content="🎮 ¡Alonso cumple 8 años! - Fiesta Minecraft">
     <meta property="og:description" content="🎉 Te invitamos a celebrar el cumpleaños de Alonso el 23 de agosto en CasaPlay Valle Grande. ¡Será una aventura épica estilo Minecraft! 🧱⚔️">
-    <meta property="og:image" content="https://github.com/enockdrw/invitacion-alonso-github.io/blob/main/image.png">
+    <meta property="og:image" content="https://github.com/enockdrw/invitacion-alonso-github.io/blob/main/image.png?raw=true">
     <meta property="og:url" content="https://enockdrw.github.io/invitacion-alonso-github.io/">
     <meta property="og:type" content="website">
     
