--- a/invitacion_alonso/index.html
+++ b/invitacion_alonso/index.html
@@ -9,7 +9,7 @@
     <!-- Meta tags para compartir en WhatsApp y redes sociales -->
     <meta property="og:title" content="🎮 ¡Alonso cumple 8 años! - Fiesta Minecraft">
     <meta property="og:description" content="🎉 Te invitamos a celebrar el cumpleaños de Alonso el 23 de agosto en CasaPlay Valle Grande. ¡Será una aventura épica estilo Minecraft! 🧱⚔️">
-    <meta property="og:image" content="https://raw.githubusercontent.enockdrw/invitacion-alonso-github.io/refs/heads/main/invitacion_alonso/img/vista_previa.png">
+    <meta property="og:image" content="https://enockdrw.github.io/invitacion-alonso-github.io/invitacion_alonso//img/vista_previa.png">
     <meta property="og:url" content="https://enockdrw.github.io/invitacion-alonso-github.io/">
     <meta property="og:type" content="website">
     
